src/test/ui/parser/bad-match.stderr
error: expected one of `:`, `;`, `=`, or `@`, found `x`
  --> $DIR/bad-match.rs:2:13
   |
LL |   let isize x = 5;
   |             ^ expected one of `:`, `;`, `=`, or `@` here

error: aborting due to previous error

